output/aave_boost_1777215065/foundry_validation/F-002_Anyone_can_trigger_the_strategy_against/forge_stdout_attempt1.log
Compiler run failed:
Error (9429): This looks like an address but has an invalid checksum. Correct checksummed address: "0x4da27a545c0c5B758a6BA100e3a049001de870f5". If this is not used as an address, please prepend '00'. For more information please see https://docs.soliditylang.org/en/develop/types.html#address-literals
SyntaxError: This looks like an address but has an invalid checksum. Correct checksummed address: "0x4da27a545c0c5B758a6BA100e3a049001de870f5". If this is not used as an address, please prepend '00'. For more information please see https://docs.soliditylang.org/en/develop/types.html#address-literals
  --> src/FlawVerifier.sol:17:40:
   |
17 |     address public constant STK_AAVE = 0x4dA27a545c0c5B758a6BA100e3a049001De870F5;
   |                                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

Error (9429): This looks like an address but has an invalid checksum. Correct checksummed address: "0x740836C95C6f3F49CccC65A27331D1f225138c39". If this is not used as an address, please prepend '00'. For more information please see https://docs.soliditylang.org/en/develop/types.html#address-literals
SyntaxError: This looks like an address but has an invalid checksum. Correct checksummed address: "0x740836C95C6f3F49CccC65A27331D1f225138c39". If this is not used as an address, please prepend '00'. For more information please see https://docs.soliditylang.org/en/develop/types.html#address-literals
  --> src/FlawVerifier.sol:19:46:
   |
19 |     address public constant AAVE_BID_TOKEN = 0x740836c95C6F3f49CccC65A27331D1f225138C39;
   |                                              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

Error (9429): This looks like an address but has an invalid checksum. Correct checksummed address: "0x660428626d4bAc1A7b1c619157e3205dAd540ad1". If this is not used as an address, please prepend '00'. For more information please see https://docs.soliditylang.org/en/develop/types.html#address-literals
SyntaxError: This looks like an address but has an invalid checksum. Correct checksummed address: "0x660428626d4bAc1A7b1c619157e3205dAd540ad1". If this is not used as an address, please prepend '00'. For more information please see https://docs.soliditylang.org/en/develop/types.html#address-literals
  --> src/FlawVerifier.sol:20:50:
   |
20 |     address public constant STK_AAVE_BID_TOKEN = 0x660428626D4baC1A7B1c619157E3205daD540ad1;
   |                                                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

Error (9429): This looks like an address but has an invalid checksum. Correct checksummed address: "0xEC568fffba86c094cf06b22134B23074DFE2252c". If this is not used as an address, please prepend '00'. For more information please see https://docs.soliditylang.org/en/develop/types.html#address-literals
SyntaxError: This looks like an address but has an invalid checksum. Correct checksummed address: "0xEC568fffba86c094cf06b22134B23074DFE2252c". If this is not used as an address, please prepend '00'. For more information please see https://docs.soliditylang.org/en/develop/types.html#address-literals
  --> src/FlawVerifier.sol:21:51:
   |
21 |     address public constant AAVE_PROPOSAL_TOKEN = 0xEc568fffba86c094cf06b22134B23074DFE2252c;
   |                                                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

Error (9429): This looks like an address but has an invalid checksum. Correct checksummed address: "0xD4e12B224C316664EbB647F69abC1fb8bB2697C7". If this is not used as an address, please prepend '00'. For more information please see https://docs.soliditylang.org/en/develop/types.html#address-literals
SyntaxError: This looks like an address but has an invalid checksum. Correct checksummed address: "0xD4e12B224C316664EbB647F69abC1fb8bB2697C7". If this is not used as an address, please prepend '00'. For more information please see https://docs.soliditylang.org/en/develop/types.html#address-literals
  --> src/FlawVerifier.sol:22:55:
   |
22 |     address public constant STK_AAVE_PROPOSAL_TOKEN = 0xD4e12b224c316664Ebb647f69aBC1Fb8BB2697C7;
   |                                                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

